<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="url_applets">http://www.clubapplets.ca</string>
    <string name="hello">Cette application est libre de droit et est rendu possible grâce à <a href="http://www.clubapplets.ca">ApplETS !</a></string>
    <string name="app_name">Radio Piranha</string>
    <string name="artist_lbl">Artist</string>
    <string name="separator"> - </string>
    <string name="album_lbl">Album</string>
    <string name="song_lbl">Song</string>
    <string name="main_menu_settings">Settings</string>
    <string name="main_menu_lyrics">Lyrics</string>
    <string name="main_menu_about">About</string>
    <string name="stream">http://radiopiranha.com:8000/radiopiranha.mp3</string>
    <string name="m3u">http://radiopiranha.com:8000/radiopiranha.mp3.m3u</string>
    <string name="error_msg">Generic Error Message</string>
    <string name="user_connections_lbl">Radio Users :</string>
    <string name="bit_rate_lbl">Bit Rate :</string>
    <string name="lyrics_lbl">No lyrics available now</string>
    <string name="stream_lbl">Stream :</string>

    <string-array name="main_labels">
        <item>Profil</item>
        <item>Nouvelles</item>
        <item>Sécurité</item>
        <item>Horaire</item>
        <item>Bottin</item>
        <item>Mes notes</item>
        <item>Bibliothèque</item>
        <item>Commentaire</item>
    </string-array>
    <string-array name="day_names">
        <item>dim.</item>
        <item>lun.</item>
        <item>mar.</item>
        <item>mer.</item>
        <item>jeu.</item>
        <item>ven.</item>
        <item>sam.</item>
    </string-array>
	<string name="title_section1">À L\'ÉCOUTE</string>
    <string name="title_section3">À PROPOS</string>
    <string name="title_section2">HORAIRE</string>
    <string name="title_section4">FACEBOOK</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="track">Track</string>
    <string name="artist">Artist</string>
    <string name="album">Album</string>
    <string name="notification_text">Vous écoutez radio Piranha</string>
    <string name="new_image">Radio Piranha a partagé un post</string>
   
    <!-- About  -->
    <string name="about_title">Bienvenue dans la section auditive de votre université!</string>
    <string name="about_paragraphe_1">Radio Piranha c\'est la radio étudiante de l\'ÉTS. C\'est un regroupement d\'étudiants dynamiques, dédiés à vous offrir des émissions au contenu varié et à la sélection musicale tout aussi mordante.</string>
    <string name="about_paragraphe_2">Diffusée sur le web 24h sur 24h, Radio Piranha donne la possibilité à tous les étudiants d\'"animer une émission de radio!</string>
    <string name="about_paragraphe_3">Vous avez un concept d\'émission incroyable à partager avec nous, vous avez des questions ou vous désirez commencer à animer dès maintenant? Passez nous voir au local A-1186!</string>
    <string name="about_communique_directeur">Pour communiquer avec le directeur: directeur@radiopiranha.com</string>
    <string name="about_soumettre_program">Pour soumettre une émission contactez: programmation@radiopiranha.com</string>
    <string name="about_soumettre_question_tech">Pour des questions sur la technique: technique@radiopiranha.com</string>
    <string name="about_soumettre_question">Pour toutes autres questions ou des informations contactez: info@radiopiranha.com</string>
    <string name="about_soumettre_commentaire">Pour des commentaires sur le site: web@radiopiranha.com</string>
    <string name="about_github">https://github.com/ApplETS/Radio-Piranha"</string>
    
    <!-- Calendar -->
    <string name="webview_connect_fail_text">Vous n\'êtes actuellement pas connecté à internet. Cette application a besoin d\'internet pour fonctionner</string>
</resources>