<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/about_scroll"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp" >

        <TextView
            android:id="@+id/about_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_title"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/about_paragraphe_1"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/TextView01"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/about_paragraphe_2"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/about_paragraphe_3"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/TextView02"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:autoLink="email"
            android:text="@string/about_communique_directeur"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@android:color/white"
            android:textColorLink="@color/yellow" />

        <TextView
            android:id="@+id/TextView05"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:autoLink="email"
            android:text="@string/about_soumettre_program"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@android:color/white"
            android:textColorLink="@color/yellow" />

        <TextView
            android:id="@+id/TextView03"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:autoLink="email"
            android:text="@string/about_soumettre_question_tech"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@android:color/white"
            android:textColorLink="@color/yellow" />

        <TextView
            android:id="@+id/TextView04"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:autoLink="email"
            android:text="@string/about_soumettre_question"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@android:color/white"
            android:textColorLink="@color/yellow" />

        <TextView
            android:id="@+id/TextView06"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:autoLink="email"
            android:text="@string/about_soumettre_commentaire"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@android:color/white"
            android:textColorLink="@color/yellow" />

        <TextView
            android:id="@+id/about_stream_lbl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="30dip"
            android:text="@string/stream_lbl"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/about_stream"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autoLink="all"
            android:text="@string/stream"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@android:color/white"
            android:textColorLink="@color/yellow" />

        <TextView
            android:id="@+id/about_applets_lbl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="30dip"
            android:text="@string/hello"
            android:autoLink="web"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/about_applets_link"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autoLink="web"
            android:text="@string/about_github"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@android:color/white"
            android:textColorLink="@color/yellow" />

        <TextView
            android:id="@+id/about_connection_info_lbl"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="30dip"
            android:text="@string/app_name"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@android:color/white" />
    </LinearLayout>

</ScrollView>